--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,10 +2,20 @@
 	box-sizing: border-box;
 }
 
+// using breakpoints
+
 .square {
-	width: 500px;
-	height: 500px;
+	width: 300px;
+	height: 300px;
+	margin: 20px;
 	background-color: hotpink;
+}
+
+@media (min-width: 700px) {
+	.square {
+		width: 500px;
+		height: 500px;
+	}
 }
 
 @media (min-width: 1000px) {
@@ -13,4 +23,12 @@
 		width: 700px;
 		height: 700px;
 	}
+}
+
+// responsive image
+// height keeps aspect ratio
+
+#hollowknight {
+	max-width: 80%;
+	height: auto;
 }
