--- a/scss/main.scss
+++ b/scss/main.scss
@@ -27,6 +27,7 @@
 
 // responsive image
 // height keeps aspect ratio
+// define images at half height for retina displays (outdated?)
 
 #hollowknight {
 	max-width: 80%;
